# math_stuff

./: CMakeLists.txt  main.cpp
linear_algebra/: linalg.cpp  linalg.h  matrix.cpp  matrix.h
loading/: WavefrontObj.cpp  WavefrontObj.h
quaternions/: Quaternion.h
system/: DebugMessenger.cpp  DebugMessenger.h  Events.cpp  Events.h  File.cpp  File.h  Log.cpp  Log.h  Timer.cpp  Timer.h  Window.cpp  Window.h
